--- a/ansible/templates/nginx.dev.conf.j2
+++ b/ansible/templates/nginx.dev.conf.j2
@@ -1,19 +1,10 @@
-worker_processes auto;
-
-events {
-    worker_connections 1024;
-}
+events {}
 
 http {
-    map $http_host $auth_realm {
-        default "Restricted Access";
-        dev.zepuff-test-task.pp.ua "Restricted Dev Access";
-        prod.zepuff-test-task.pp.ua "Restricted Prod Access";
-    }
-
     server {
-        listen 80 default_server;
+        listen 80;
         server_name {{ prod_domain }} {{ dev_domain }};
+
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
         }
@@ -23,18 +14,22 @@ http {
         }
     }
 
+    # --- PROD ---
     server {
         listen 443 ssl;
-        server_name {{dev_domain}};
+        server_name {{ prod_domain }};
 
-        ssl_certificate /etc/letsencrypt/live/devops-project/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/devops-project/privkey.pem;
-        
-        auth_basic $auth_realm;
+        ssl_certificate /etc/letsencrypt/live/{{ cert_name }}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/{{ cert_name }}/privkey.pem;
+
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+        auth_basic "Restricted Access";
         auth_basic_user_file /etc/nginx/.htpasswd;
-        
+
         location / {
-            proxy_pass http://node-app-dev:3000;
+            proxy_pass http://node-app-prod:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -44,16 +39,19 @@ http {
 
     server {
         listen 443 ssl;
-        server_name {{prod_domain}};
+        server_name {{ dev_domain }};
 
-        ssl_certificate /etc/letsencrypt/live/devops-project/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/devops-project/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/{{ cert_name }}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/{{ cert_name }}/privkey.pem;
 
-        auth_basic $auth_realm;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+        auth_basic "Restricted Access";
         auth_basic_user_file /etc/nginx/.htpasswd;
 
         location / {
-            proxy_pass http://node-app-prod:3000;
+            proxy_pass http://node-app-dev:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
