--- a/ansible/templates/nginx.conf.j2
+++ b/ansible/templates/nginx.conf.j2
@@ -1,27 +1,30 @@
+# /ansible/templates/nginx.conf.j2
 events {}
 
 http {
+    # --- ВАЖЛИВО: Вказуємо Nginx на DNS-сервер Docker --- #
+    # Це дозволить Nginx шукати контейнери за іменами в реальному часі.
+    resolver 127.0.0.11 valid=30s; # <-- ДОДАНО
+
+    # --- HTTP -> HTTPS Redirect (для обох доменів) ---
     server {
         listen 80;
         server_name {{ prod_domain }} {{ dev_domain }};
-
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
         }
-
         location / {
             return 301 https://$host$request_uri;
         }
     }
 
-    # --- PROD ---
+    # --- PROD SERVER BLOCK (HTTPS) ---
     server {
         listen 443 ssl;
         server_name {{ prod_domain }};
 
         ssl_certificate /etc/letsencrypt/live/{{ cert_name }}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/{{ cert_name }}/privkey.pem;
-
+        # ... інші налаштування SSL ...
         include /etc/letsencrypt/options-ssl-nginx.conf;
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
@@ -29,21 +32,25 @@ http {
         auth_basic_user_file /etc/nginx/.htpasswd;
 
         location / {
-            proxy_pass http://node-app-prod:3000;
+            # --- ВАЖЛИВО: Використовуємо змінну для proxy_pass --- #
+            set $upstream_prod http://node-app-prod:3000; # <-- ДОДАНО
+            proxy_pass $upstream_prod;                     # <-- ЗМІНЕНО
+
             proxy_set_header Host $host;
+            # ... інші proxy_set_header ...
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 
+    # --- DEV SERVER BLOCK (HTTPS) ---
     server {
         listen 443 ssl;
         server_name {{ dev_domain }};
 
         ssl_certificate /etc/letsencrypt/live/{{ cert_name }}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/{{ cert_name }}/privkey.pem;
-
+        # ... інші налаштування SSL ...
         include /etc/letsencrypt/options-ssl-nginx.conf;
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
@@ -51,8 +58,12 @@ http {
         auth_basic_user_file /etc/nginx/.htpasswd;
 
         location / {
-            proxy_pass http://node-app-dev:3000;
+            # --- ВАЖЛИВО: Використовуємо змінну для proxy_pass --- #
+            set $upstream_dev http://node-app-dev:3000; # <-- ДОДАНО
+            proxy_pass $upstream_dev;                     # <-- ЗМІНЕНО
+
             proxy_set_header Host $host;
+            # ... інші proxy_set_header ...
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
